--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" data-theme="light" style="color-scheme: light;">
    <head>
       <meta charset="UTF-8" />
+      <meta name="color-scheme" content="light">
       <meta content="width=device-width, initial-scale=1.0" name="viewport" />
       <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png" />
       <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
